--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
   },
   "homepage": "https://github.com/TheresiaSamantha/Chat-Ibu-Server#readme",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "express": "^4.18.2",
+    "sequelize": "^6.32.1",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "socket.io": "^4.6.1",
+    "jsonwebtoken": "^9.0.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "dotnet": "^1.1.4",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
-    "sequelize": "^6.37.7",
-    "socket.io": "^4.8.1"
+    "openai": "^4.0.0",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
-    "jest": "^30.2.0",
-    "nodemon": "^3.1.11",
-    "sequelize-cli": "^6.6.3",
-    "supertest": "^7.1.4"
+    "sequelize-cli": "^6.6.1",
+    "nodemon": "^3.0.0"
   }
 }
