feat: add Supabase database support
- Add SSL configuration for Supabase in config.json (production & supabase env)
- Update models/index.js to support SSL dialectOptions for Supabase connection
- Add production migration and seed scripts in package.json
- Configure DATABASE_URL environment variable support for Supabase PostgreSQL connection

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bin/www.js",
     "dev": "nodemon bin/www.js",
-    "migrate": "sequelize-cli db:migrate",
+    "migrate": "node scripts/migrate.js",
+    "migrate:prod": "node scripts/migrate.js production",
     "migrate:undo": "sequelize-cli db:migrate:undo",
-    "seed": "sequelize-cli db:seed:all",
-    "seed:undo": "sequelize-cli db:seed:undo:all"
+    "seed": "node scripts/seed.js",
+    "seed:prod": "node scripts/seed.js production",
+    "seed:undo": "sequelize-cli db:seed:undo:all",
+    "test:db": "node scripts/test-db-connection.js"
   },
   "repository": {
     "type": "git",
